--- a/DeezerProyecto/app/src/main/res/layout/item_cancion_home.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_cancion_home.xml
@@ -4,7 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/imagenCancion"
@@ -20,5 +21,9 @@
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:layout_marginTop="4dp" />
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:gravity="center" />
 </LinearLayout>
