--- a/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="16dp"
     android:background="@color/colorFondo">
 
-    <TextView
-        android:id="@+id/textoPlaylistsPublicas"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/botonBuscarAmigos"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Playlists Públicas"
-        android:textColor="@color/colorTexto"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center" />
-</FrameLayout>
+        android:text="Buscar Amigos"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@color/colorVerdeSpotify"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/botonListaAmigos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Lista de Amigos"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@color/colorVerdeSpotify"/>
+</LinearLayout>
