--- a/DeezerProyecto/app/src/main/res/layout/fragment_home.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
 
         <ImageButton
             android:id="@+id/botonPerfil"
+            android:layout_marginTop="15dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
