--- a/DeezerProyecto/app/src/main/res/layout/fragment_lista_amigos.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_lista_amigos.xml
@@ -3,21 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
-    <TextView
+    <ProgressBar
+        android:id="@+id/progressBarAmigos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mis Amigos"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorVerdeSpotify"
-        android:layout_marginBottom="8dp"/>
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerAmigos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="16dp" />
+        android:padding="8dp" />
 </LinearLayout>
